compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_missing_right_bound.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "for : 1 .. end for"
---
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
