compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_normal_int_bounds.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "for : 1 .. 10 end for"
---
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
