compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_normal_step_by_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "for : false .. true by 2 end for"
---
"<root>"@(dummy) [Module(No)]: <error>

