compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_wrong_types_step_by.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "for : false .. true by false end for"
---
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 23..28): mismatched types
| note for (FileId(1), 23..28): this is of type `boolean`
| info: `boolean` is not an integer type
