compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_get_stmt_wrong_ref_literal.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "get 1\n"
---
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 4..5): cannot assign into expression
| error for (FileId(1), 4..5): not a reference to a variable
