compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_get_stmt_wrong_type_only_stream.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "get : 1.0"
---
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 6..9): mismatched types
| note for (FileId(1), 6..9): this is of type `real`
| info: `real` is not an integer type
