compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_if_matching_types.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "if true then\nelsif true then\nendif\n"
---
"<root>"@(dummy) [Module(No)]: <error>

