compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_pointer_ty_nested.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : unchecked ^ unchecked ^ int"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of unchecked pointer to unchecked pointer to int
"<root>"@(dummy) [Module(No)]: <error>

