compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_pointer_ty_normal.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : ^int"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of pointer to int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
